# dds-group15

./: README.md  contribution.txt  contributions.txt  docker-compose-50.yml  docker-compose-90.yml  docker-compose.yml  gateway_nginx.conf  requirements.txt
common/: __init__.py  redis_queue.py
env/: orchestrator_redis.env
orchestrator/: Dockerfile  README.md  __init__.py  app.py  engine.py  lock.py  models.py  persistance.py  persistence.py  pyproject.toml  queue.py  recovery.py  requirements.txt
order/: Dockerfile  app.py  requirements.txt
payment/: Dockerfile  app.py  requirements.txt
stock/: Dockerfile  app.py  redis_queue.py  requirements.txt
