[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dds-orchestrator"
version = "0.1.0"
description = "Reusable Redis-backed workflow orchestration library for SAGA and 2PC."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "redis>=5,<6",
    "msgspec>=0.18,<1",
]

[tool.setuptools]
include-package-data = true
packages = ["orchestrator"]

[tool.setuptools.package-dir]
orchestrator = "."
